# glob2regex

./: .gitignore  LICENSE  MANIFEST.in  requirements.txt  setup.cfg  setup.py  tox.ini
doc/: conf.py  glob2regex.rst  index.rst
glob2regex/: __init__.py  translator.py
tests/: test_module.py  test_translator.py
