[metadata]
name = glob2src
author = Gilles Fritz
author_email = gilles@famille-fritz.fr
version = 1.0
description = A simple translator from glob to regex pattern
long_description = file: README.md, LICENSE
keywords = glob, regex, regular expression
license = MIT License
url = https://github.com/garf365/glob2regex
classifiers =
    DevelopmentStatus :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages =
    glob2regex
